<resources>
    <string name="app_name">Hoc Reader</string>
    <string name="author_name">Olena Brygynets</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="app_label">hello reader search label</string>
    <string name="search_hint">Search books</string>
    <string name="action_clear_search_history">Clear search history</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="last">last</string>
    <string name="first">first</string>
    <string name="no_items">No items.</string>
    <string name="hello_world">Hello world</string>
    <string name="under_development">Under development.</string>
    <string name="transcription">transcription</string>
    <string name="wordFromContext">wordFromContext</string>
    <string name="page_number">0</string>
    <string name="text_on_page">text on page</string>
    <string name="word_item">wordFromContext</string>
    <string name="translation_item">translation</string>
    <string name="dialog_message_item_pinned">Item pinned! (position = %1$d)</string>
    <string name="snack_bar_action_undo">UNDO</string>
    <string name="snack_bar_text_item_removed">1 item removed</string>
    <string name="activity_title_demo_s_on_longpress">on long press</string>

    <!--fragment alert dialog-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_page_title">Go to page</string>
    <string name="go_to_page_content">input page number</string>
    <string name="input_page">page number</string>
    <string name="previous_page">to previous page</string>
    <string name="snack_bar_action_back">BACK</string>
    <string name="memorizing_notification_title">Do you remember?</string>

    <!--navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="helloreader_eaccid_com">helloreader@eaccid.com</string>

    <!--preferences-->
    <string name="notifications_frequency_key">notifications_frequency</string>
    <string name="pref_leo_sign_in_key">pref_leo_sign_in</string>
    <string name="default_pref_value"> </string>
    <string name="pref_title_notify_frequency">Memorizing notification</string>
    <string-array name="pref_notify_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_notify_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_leo_sign_in_title_display_name">Lingualeo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="authorized_status">Authorized</string>
    <string name="authorizing_status">Authenticating…</string>
    <string name="unauthorized_status">Unauthorized</string>
    <string name="menu_more_vert">Menu More Vertical</string>
    <string name="empty_translation">*?</string>
    <string name="empty_word">Word</string>
    <string name="word_context">"I clasp the flask between my hands even though the warmth from the tea has long since leached into the frozen air. My muscles are clenched tight against the cold. If a pack of wild dogs were to appear at this moment, the odds of scaling a tree before they attacked are not in my favor.  I should get up, move around, and work the stiffness from my limbs."</string>

    <!--  Action Mode Menu Items -->
    <string name="learn">Learn</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="clear_all_words">Clear all words</string>
    <string name="edit_all_words">Edit all words</string>
    <string name="extension">Extension</string>
    <string name="book_name">Book name</string>
    <string name="remember">REMEMBER</string>
    <string name="don_t_know">DON\'T KNOW</string>
    <string name="give_me_a_hint"> *? Give me a hint</string>
    <string name="input_new_word">Input new word</string>
    <string name="base_word">Base word</string>
    <string name="action_words_editor">Words Editor</string>

    <string name="desc">Empty</string>
    <string name="choose_the_directory">Edit directories…</string>
    <string name="directories">Directories</string>
    <string name="download">Download</string>
    <string name="all_directories">All Directories</string>
    <string name="other">Other</string>
    <string name="about">About</string>
    <string name="internal_storage">Internal storage /…</string>
    <string name="sd_card">SD card /…</string>
    <string name="delete_directories">delete directories…</string>
    <string name="loading_books">Loading books…</string>

    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="grant">GRANT</string>
    <string name="sign_in_succeed">Sign in succeed</string>
    <string name="sign_out_succeed">Sign out succeed</string>
    <string name="sign_in_failed">Sign in failed</string>

    <string name="selectable_mode">Hold a long press to select</string>
    <string name="reader_mode">Reader mode</string>


</resources>
