<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--  Toolbar ActionMode Menu Items  -->
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_sweep_black_24px"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy_white_24px"
        android:orderInCategory="100"
        android:title="@string/copy"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_learn"
        android:icon="@drawable/ic_learn_by_white_gray_18px"
        android:orderInCategory="100"
        android:title="@string/learn"
        app:showAsAction="always" />
</menu>