<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:showIn="@layout/editor_word_item_fragment_1">

    <ImageView
        android:id="@+id/word_image"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/empty_picture_background"
        android:contentDescription="@string/desc"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/word"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/color_word_text_dark"
                android:text="@string/empty_word" />

            <TextView
                android:id="@+id/word_transcription"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="16dp"
                android:text="@string/transcription" />

            <com.andexert.library.RippleView style="@style/icon_toggles_ripple_effect">
                <ImageView
                    android:id="@+id/already_learned"
                    style="@style/icon_toggles"
                    android:src="@drawable/ic_star_border_yellow_24px"
                    android:contentDescription="@string/desc"/>
            </com.andexert.library.RippleView>

        </FrameLayout>

        <View style="@style/frame_divider" />

        <include layout="@layout/card_action_bottom_buttons" />

    </LinearLayout>

</LinearLayout>