<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayoutTranscription"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/transcription_speaker"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/colorTransparent"
                android:src="@drawable/ic_volume_up_gray_24px"
                android:contentDescription="@string/desc"/>

            <TextView
                android:id="@+id/text_transcription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/transcription" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="8dp"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:text="@string/base_word"/>

            <ImageView
                android:id="@+id/image_word_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:srcCompat="@android:drawable/ic_dialog_alert"
                android:contentDescription="@string/desc"/>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/list_translations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:background="#5adce9f0" />

</LinearLayout>